# NeoCompanion

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci-build.yml  ci-check.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.vue  api.ts  main.ts  wallpaper-plugin.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  windows-wallpaper.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/composables/: useChat.ts  useFocus.ts  useKnowledgeAi.ts  useKnowledgeApi.ts  useKnowledgeMock.ts  useKnowledgeWorkspace.ts  usePermission.ts  usePetState.ts  useSettings.ts  useTasks.ts  useTheme.ts  useWallpaperState.ts
apps/desktop/src/styles/: animations.css  base.css  knowledge.css  markdown.css  panel.css  permission-bubble.css  pet.css  settings.css  tokens.css  wallpaper.css
apps/desktop/tests/: markdown-roundtrip.test.ts  setup.ts  useKnowledgeApi.test.ts
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GLOSSARY.md  PRD_overview.md  SOUL_CONFIG.md  SPIKE_NODE_SQLITE.md  TERM_MIGRATION_pet_to_assistant.md  TESTING.md  TODO_INVENTORY.md  TTS_SETUP.md  WALLPAPER_STATUS_LAYER.md  具体能力构思.md
docs/superpowers/plans/: 2026-06-13-github-actions.md
docs/superpowers/specs/: 2026-06-13-github-actions-design.md
scripts/: dev.mjs  spike-node-sqlite.mjs  verify-docs.sh
(+88 files in other folders)
