[package]
name = "neo-companion"
version = "0.1.0"
description = "NeoCompanion desktop shell"
authors = ["NeoCompanion"]
edition = "2021"

[lib]
name = "neo_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-wallpaper = "3.0.0"
